# CampusScheduler

./: .env.example  .gitignore  GOOGLE_API_GUIDE.md  LICENSE  README.md  main.py  pyproject.toml  requirements.txt  test.py
.github/ISSUE_TEMPLATE/: issue-template.md
src/: config.py
src/campsched/: config.py
src/campsched/cli/: app.py
src/campsched/cli/commands/: delete.py  export.py  sync.py
src/campsched/core/: parser.py  scraper.py
src/campsched/services/: calendar_client.py
src/campsched/utils/: enumerators.py  exceptions.py  scrape_to_lecture_flow.py
src/core/: parser.py  scraper.py
src/models/: schedule.py
src/services/: calendar_client.py  quickstart_secure.py
