[build-system]
requires = ["setuptools>=80.9.0"]
build-backend = "setuptools.build_meta"

[project]
name = "campsched"
version = "0.1.0"
description = "A CLI to sync your university schedule with Google Calendar."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-api-python-client>=2.182.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.2",
    "ics>=0.7.2",
    "keyring>=25.6.0",
    "platformdirs>=4.4.0",
    "playwright>=1.55.0",
    "prompt-toolkit>=3.0.52",
    "python-dotenv>=1.1.1",
    "pytz>=2025.2",
    "rich>=14.1.0",
    "typer>=0.19.1",
]

[project.scripts]
campsched = "campsched.cli.app:app"
