[build-system]
requires = ["setuptools>=80.9.0"]
build-backend = "setuptools.build_meta"

[project]
name = "campsched"
version = "0.1.0"
description = "A CLI to sync your university schedule with Google Calendar."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "google-api-python-client>=2.182.0, <3.0",
    "google-auth-httplib2>=0.2.0, <1.0",
    "google-auth-oauthlib>=1.2.2, <2.0",
    "ics>=0.7.2, <1.0",
    "keyring>=25.6.0, <26.0",
    "platformdirs>=4.4.0, <5.0",
    "playwright>=1.55.0, <2.0",
    "prompt-toolkit>=3.0.52, <4.0",
    "python-dotenv>=1.1.1, <2.0",
    "pytz>=2025.2, <2026.0",
    "rich>=14.1.0, <15.0",
    "typer>=0.19.1, <1.0",
]

[project.scripts]
campsched = "campsched.cli.app:app"
